manifests/mysql-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  namespace: foodies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      containers:
        - name: mysql-db
          image: gabrielevitali/foodies-mysql:latest
          resources:
            requests:
              memory: "512Mi"  # richiesta di memoria
              cpu: "500m"      # richiesta di CPU
            limits:
              memory: "1Gi"    # limite di memoria
              cpu: "1"         # limite di CPU
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
