manifests/auth.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: foodies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: gabrielevitali/foodies-auth-service:latest   # pull da repository pubblico
          imagePullPolicy: Always  # l'immagine viene prelevata ogni volta
          ports:
            - containerPort: 5001
              name: http
          resources:
            requests:
              memory: "256Mi"  # richiesta di memoria
              cpu: "250m"      # richiesta di CPU
            limits:
              memory: "512Mi"  # limite di memoria
              cpu: "500m"      # limite di CPU
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: foodies
spec:
  selector:
    app: auth  # deve corrispondere all'etichetta nel Deployment
  ports:
    - protocol: TCP
      port: 5001         # porta esposta dal service
      targetPort: 5001   # porta in cui il pod è in ascolto
