manifests/kafka-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: foodies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - env:
            - name: KAFKA_ADVERTISED_LISTENERS
              value: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
            - name: KAFKA_BROKER_ID
              value: "1"
            - name: KAFKA_INTER_BROKER_LISTENER_NAME
              value: PLAINTEXT
            - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
              value: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
            - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
              value: "1"
            - name: KAFKA_ZOOKEEPER_CONNECT
              value: zookeeper:2181
          resources:
            requests:
              memory: "512Mi"  # richiesta di memoria
              cpu: "500m"      # richiesta di CPU
            limits:
              memory: "1Gi"    # limite di memoria
              cpu: "1"         # limite di CPU
          image: confluentinc/cp-kafka:latest
          name: kafka
          ports:
            - containerPort: 29092
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  metadata:
    name: kafka
    namespace: foodies
spec:
  ports:
    - name: "29092"
      port: 29092
      targetPort: 29092
  selector:
    app: kafka
