manifests/order.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: foodies
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: gabrielevitali/foodies-order-service:latest   # pull da repository pubblico
          imagePullPolicy: Always  # l'immagine viene prelevata ogni volta
          ports:
            - containerPort: 5003
              name: http
          resources:
            requests:
              memory: "256Mi"  # richiesta di memoria
              cpu: "250m"      # richiesta di CPU
            limits:
              memory: "512Mi"  # limite di memoria
              cpu: "500m"      # limite di CPU
---
apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: foodies
spec:
  selector:
    app: order  # deve corrispondere all'etichetta nel Deployment
  ports:
    - protocol: TCP
      port: 5003         # porta esposta dal service
      targetPort: 5003   # porta in cui il pod è in ascolto
